--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "netlify-blobs-vote",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
-    "@netlify/blobs": "^0.4.1"
-  },
-  "type": "module"
+    "@netlify/blobs": "^10.0.0"
+  }
 }
